tests/NormalTests/paczka1/small_fuzzy/28978654.err
Error in line 8: A413 S33 82,7
Error in line 5: yg2KPE210jE S515 10,5
Error in line 15: WJdS S515 213,3
